+--------------------------+
Sun Feb 23 09:32:22 GMT+7 2014
qpdf: Upgraded to 5.1.1

+--------------------------+
Sat Feb 22 18:50:44 GMT+7 2014
cups-filters: Upgraded to 1.0.46

+--------------------------+
Sat Feb 22 16:12:40 GMT+7 2014
dropbox: Upgraded to 2.6.15
e17: Removed
filezilla: Upgraded to 3.7.4.1

+--------------------------+
Fri Feb 21 23:59:12 GMT+7 2014
cgit: Upgraded to 0.10

+--------------------------+
Tue Feb 18 08:33:15 GMT+7 2014
enlightenment: Upgraded to 0.18.4

+--------------------------+
Sun Feb 16 01:20:00 GMT+7 2014
cups-filters: Upgraded to 1.0.45

+--------------------------+
Tue Feb 11 08:28:13 GMT+7 2014
calibre: Upgraded to 1.23.0
harfbuzz: Removed (part of Slackware)
filezilla: Upgraded to 3.7.4
lxml: Upgraded to 3.3.0
tlp: Upgraded to 0.4.1
webp -> libwebp

+--------------------------+
Sat Feb  8 10:56:27 GMT+7 2014
hub: Added

+--------------------------+
Wed Feb  5 08:39:17 GMT+7 2014
mysql-workbench: Upgraded to 6.1.1

+--------------------------+
Tue Feb  4 07:40:01 GMT+7 2014
aegisub: Upgraded to 3.1.2
connman: Upgraded to 1.21

+--------------------------+
Sat Feb  1 17:09:00 GMT+7 2014
aegisub: Upgraded to 3.1.1
ffms2: Renamed from ffms

+--------------------------+
Wed Jan 29 07:48:51 GMT+7 2014
EFL: Upgraded to 1.8.5
elementary: Upgraded to 1.8.4
emotion-generic-players: Upgraded to 1.8.1
enlightenment: Upgraded to 1.8.3

+--------------------------+
Sun Jan 19 22:55:47 GMT+7 2014
python-EFL: Upgraded to 1.8.1

+--------------------------+
Thu Jan  9 23:56:50 GMT+7 2014
cups: Upgraded to 1.7.1
EFL: Upgraded to 1.8.4
elementary: Upgraded to 1.8.3
+--------------------------+
Fri Jan  3 08:41:44 GMT+7 2014
OpenCV: Upgraded to 2.4.8

+--------------------------+
Fri Dec 27 09:01:09 GMT+7 2013
enlightenment: Upgraded to 0.18.2

+--------------------------+
Thu Dec 26 10:43:36 GMT+7 2013
gogglesmm: Added

+--------------------------+
Wed Dec 25 11:26:00 GMT+7 2013
libgda: Upgraded to 5.2.2

+--------------------------+