@@ -190,7 +190,7 @@ SLACKBUILD SHORT DESCRIPTION:  cssutils (CSS parser and builder)
 
 SLACKBUILD NAME: cups-filters
 SLACKBUILD LOCATION: ./cups-filters
-SLACKBUILD FILES: README cups-filters.SlackBuild cups-filters.info slack-desc
+SLACKBUILD FILES: README cups-filters.SlackBuild cups-filters.info doinst.sh slack-desc
 SLACKBUILD VERSION: 1.0.46
 SLACKBUILD DOWNLOAD: https://www.openprinting.org/download/cups-filters/cups-filters-1.0.46.tar.xz
 SLACKBUILD DOWNLOAD_x86_64: 
